<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/configurationItem"
        android:title="@string/item_configuracoes"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/exitItem"
        android:title="@string/logut"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/researchItem"
        android:title="@string/research"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search" />

    <item android:id="@+id/addItem"
        android:title="@string/add"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add" />


</menu>