<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top|center_vertical|center_horizontal|center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.android.portfolio.whatsappclone.whatsappclone.activity.RegisterUserActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="113dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/usuario" />

        <EditText
            android:id="@+id/editTextNameId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/typeYourName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_your_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type_your_password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/buttonRegisterId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/registerButton" />
    </LinearLayout>

</RelativeLayout>