<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.android.portfolio.whatsappclone.whatsappclone.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/largura_logo"
        android:layout_height="154dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/type_your_email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/editTextPasswordId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editTextEmailId"
        android:layout_marginBottom="214dp"
        android:ems="10"
        android:hint="@string/type_your_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/buttonLoginId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editTextEmailId"
        android:layout_marginBottom="154dp"
        android:text="@string/login"
        android:theme="@style/botaoPadrao"/>

    <TextView
        android:id="@+id/textViewMessageCreateAccountId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:onClick="abrirCadastroUsuario"
        android:text="@string/inviteCreateAccount"
        android:textColor="@android:color/white" />

</RelativeLayout>
